--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/plugin-content-blog": "^2.4.1",
+    "@docusaurus/plugin-ideal-image": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
@@ -30,8 +31,11 @@
     "react-image-crop": "^10.1.5"
   },
   "devDependencies": {
+    "@codemirror/merge": "^6.3.0",
+    "@ddietr/codemirror-themes": "^1.4.2",
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "codemirror": "^6.0.1",
     "typescript": "^4.7.4"
   },
   "browserslist": {
